--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         <activity android:name=".Home_Activity" android:exported="true">
 
         </activity>
+        <activity android:name=".CourseDetailsActivity" android:exported="true">
+
+        </activity>
     </application>
 
 </manifest>
